# ViTServer

./: .gitignore  README.md
inference-server/: CMakeLists.txt  config.json
inference-server/include/: binary_protocol.hpp  engine.hpp  engine_ort.hpp  engine_trt.hpp  postprocessor.hpp  preprocessor.hpp  rtsp_source.hpp
inference-server/scripts/: test_client.py
inference-server/src/: engine.cpp  engine_factory.cpp  engine_ort.cpp  engine_trt.cpp  main.cpp  postprocessor.cpp  preprocessor.cpp  preprocessor.cu  rtsp_source.cpp
training/: detect.py  export.py  requirements.txt  train.py
training/configs/: coco_mini.yaml  custom_model.yaml  large.yaml  medium.yaml  nano.yaml  small.yaml  smoke_test.yaml  tpu_dev.yaml  xlarge_1280.yaml  xlarge_640.yaml
training/datasets/: __init__.py  coco_dataset.py  transforms.py
training/losses/: __init__.py  bbox_loss.py  focal_loss.py  hungarian.py
training/models/: __init__.py  backbone.py  detector.py  mfe.py  transformer.py
training/scripts/: create_coco_subset.py  create_smoke_dataset.py  download_coco.py  download_coco_mini.py  test_tpu.py
training/utils/: __init__.py  metrics.py  visualization.py
